--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <title>Survey Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="app.css">
-    <script src="app.js"></script>
 </head>
 <body>
 <h1 id="title">Survey Form</h1>
 <div id="form-outer">
     <p id="description"></p>
-    <form id="survey-form" method="GET" action="https://crossorigin.me/https://freecodecamp.com">
+    <form id="survey-form" name="myForm" onsubmit="return validateForm()" method="GET" action="/">
     <div class="rowTab">
       <div class="labels">
         <label id="name-label" for="name">* Name: </label>
       </div>
       <div class="rightTab">
-        <input autofocus="" type="text" name="name" id="name" class="input-field" placeholder="Enter your name" required="">
+        <input autofocus="" type="text" name="fname" id="name" class="input-field" placeholder="Enter your name" required="">
       </div>
     </div>
     <div class="rowTab">
